--- a/App/ProductViewer/ProductViewer/Info.plist
+++ b/App/ProductViewer/ProductViewer/Info.plist
@@ -51,5 +51,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This app would like to access to the photo library.</string>
 </dict>
 </plist>
